--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="./css/modern-normalize.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -17,20 +18,21 @@
 
     <!-- Шапка -->
     <header>
-        <!-- Навигация по сайту -->
-        <nav>
-            <a href="./index.html" class="logo-head" lang="en"><span class="logo-accent">Web</span>Studio</a>
-            <ul class="site-nav">
-                <li><a href="./index.html" class="link current">Студия</a></li>
-                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-                <li><a href="" class="link">Контакты</a></li>
+        <div class="container">
+            <!-- Навигация по сайту -->
+            <nav class="navigation">
+                <a href="./index.html" class="logo-head" lang="en"><span class="logo-accent">Web</span>Studio</a>
+                <ul class="site-nav">
+                    <li><a href="./index.html" class="link current">Студия</a></li>
+                    <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+                    <li><a href="" class="link">Контакты</a></li>
+                </ul>
+            </nav>
+            <ul class="contact-nav">
+                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
             </ul>
-        </nav>
-        <ul class="contact-nav">
-            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-        </ul>
-
+        </div>
     </header>
 
     <!-- Раздел с уникальным контентом -->
@@ -44,76 +46,84 @@
 
         <!-- Секция 'Особенности' -->
         <section class="section">
-            <h2 class="section-title">Особенности</h2>
-            <ul class="features">
-                <li>
-                    <h3 class="title">Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                </li>
-                <li>
-                    <h3 class="title">Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                </li>
-                <li>
-                    <h3 class="title">Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                </li>
-                <li>
-                    <h3 class="title">Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                </li>
-            </ul>
+            <div class="container">
+                <h2 class="section-title">Особенности</h2>
+                <ul class="features">
+                    <li>
+                        <h3 class="title">Внимание к деталям</h3>
+                        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    </li>
+                    <li>
+                        <h3 class="title">Пунктуальность</h3>
+                        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    </li>
+                    <li>
+                        <h3 class="title">Планирование</h3>
+                        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    </li>
+                    <li>
+                        <h3 class="title">Современные технологии</h3>
+                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    </li>
+                </ul>
+            </div>
         </section>
 
         <!-- Секция 'Чем мы занимаемся' -->
         <section class="section">
-            <h2 class="section-title">Чем мы занимаемся</h2>
-            <ul>
-                <li><img src="images/work1.jpg" alt="Programming" width="370"></li>
-                <li><img src="images/work2.jpg" alt="Navigation" width="370"></li>
-                <li><img src="images/work3.jpg" alt="Visualization" width="370"></li>
-            </ul>
+            <div class="container">
+                <h2 class="section-title">Чем мы занимаемся</h2>
+                <ul>
+                    <li><img src="images/work1.jpg" alt="Programming" width="370"></li>
+                    <li><img src="images/work2.jpg" alt="Navigation" width="370"></li>
+                    <li><img src="images/work3.jpg" alt="Visualization" width="370"></li>
+                </ul>
+            </div>
         </section>
 
         <!-- Секция 'Наша команда' -->
-        <section class="section">
-            <h2 class="section-title">Наша команда</h2>
-            <ul class="our-team">
-                <li>
-                    <img src="images/team1.jpg" alt="Product Designer" width="270">
-                    <h3 class="title">Игорь Демьяненко</h3>
-                    <p lang="en">Product Designer</p>
-                </li>
-                <li>
-                    <img src="images/team2.jpg" alt="Frontend Developer" width="270">
-                    <h3 class="title">Ольга Репина</h3>
-                    <p lang="en">Frontend Developer</p>
-                </li>
-                <li>
-                    <img src="images/team3.jpg" alt="Marketing" width="270">
-                    <h3 class="title">Николай Тарасов</h3>
-                    <p lang="en">Marketing</p>
-                </li>
-                <li>
-                    <img src="images/team4.jpg" alt="UI Designer" width="270">
-                    <h3 class="title">Михаил Ермаков</h3>
-                    <p lang="en">UI Designer</p>
-                </li>
-            </ul>
+        <section class="section last">
+            <div class="container">
+                <h2 class="section-title team">Наша команда</h2>
+                <ul class="our-team">
+                    <li>
+                        <img src="images/team1.jpg" alt="Product Designer" width="270">
+                        <h3 class="title">Игорь Демьяненко</h3>
+                        <p lang="en">Product Designer</p>
+                    </li>
+                    <li>
+                        <img src="images/team2.jpg" alt="Frontend Developer" width="270">
+                        <h3 class="title">Ольга Репина</h3>
+                        <p lang="en">Frontend Developer</p>
+                    </li>
+                    <li>
+                        <img src="images/team3.jpg" alt="Marketing" width="270">
+                        <h3 class="title">Николай Тарасов</h3>
+                        <p lang="en">Marketing</p>
+                    </li>
+                    <li>
+                        <img src="images/team4.jpg" alt="UI Designer" width="270">
+                        <h3 class="title">Михаил Ермаков</h3>
+                        <p lang="en">UI Designer</p>
+                    </li>
+                </ul>
+            </div>
         </section>
 
     </main>
 
     <!-- Подвал -->
     <footer class="footer">
-        <a href="./index.html" class="logo-foot" lang="en"><span class="logo-accent">Web</span>Studio</a>
-        <address>
-            <ul class="adress">
-                <li><a href="https://goo.gl/maps/gTEP4WeZBYR6XG7p6" class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com" class="link-opacity">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="link-opacity">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
+        <div class="container">
+            <a href="./index.html" class="logo-foot" lang="en"><span class="logo-accent">Web</span>Studio</a>
+            <address>
+                <ul class="adress">
+                    <li><a href="https://goo.gl/maps/gTEP4WeZBYR6XG7p6" class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li><a href="mailto:info@devstudio.com" class="link-opacity">info@devstudio.com</a></li>
+                    <li><a href="tel:+380961111111" class="link-opacity">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
     </footer>
 
 </body>
