--- a/index.html
+++ b/index.html
@@ -86,25 +86,25 @@
             <div class="container">
                 <h2 class="section-title team">Наша команда</h2>
                 <ul class="our-team">
-                    <li>
-                        <img src="images/team1.jpg" alt="Product Designer" width="270">
+                    <li class="cards">
+                        <img class="workers" src="images/team1.jpg" alt="Product Designer" width="270">
                         <h3 class="title">Игорь Демьяненко</h3>
-                        <p lang="en">Product Designer</p>
+                        <p class="text" lang="en">Product Designer</p>
                     </li>
-                    <li>
-                        <img src="images/team2.jpg" alt="Frontend Developer" width="270">
+                    <li class="cards">
+                        <img class="workers" src="images/team2.jpg" alt="Frontend Developer" width="270">
                         <h3 class="title">Ольга Репина</h3>
-                        <p lang="en">Frontend Developer</p>
+                        <p class="text" lang="en">Frontend Developer</p>
                     </li>
-                    <li>
-                        <img src="images/team3.jpg" alt="Marketing" width="270">
+                    <li class="cards">
+                        <img class="workers" src="images/team3.jpg" alt="Marketing" width="270">
                         <h3 class="title">Николай Тарасов</h3>
-                        <p lang="en">Marketing</p>
+                        <p class="text" lang="en">Marketing</p>
                     </li>
-                    <li>
-                        <img src="images/team4.jpg" alt="UI Designer" width="270">
+                    <li class="cards">
+                        <img class="workers" src="images/team4.jpg" alt="UI Designer" width="270">
                         <h3 class="title">Михаил Ермаков</h3>
-                        <p lang="en">UI Designer</p>
+                        <p class="text" lang="en">UI Designer</p>
                     </li>
                 </ul>
             </div>
@@ -117,8 +117,8 @@
         <div class="container">
             <a href="./index.html" class="logo-foot" lang="en"><span class="logo-accent">Web</span>Studio</a>
             <address>
-                <ul class="adress">
-                    <li><a href="https://goo.gl/maps/gTEP4WeZBYR6XG7p6" class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <ul class="address">
+                    <li><a href="https://goo.gl/maps/6MaBWdPsoocgWnQo9" class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
                     <li><a href="mailto:info@devstudio.com" class="link-opacity">info@devstudio.com</a></li>
                     <li><a href="tel:+380961111111" class="link-opacity">+38 096 111 11 11</a></li>
                 </ul>
