--- a/portfolio.html
+++ b/portfolio.html
@@ -16,112 +16,118 @@
     
     <!-- Шапка -->
     <header>
-        <!-- Навигация по сайту -->
-        <nav>
-            <a href="./index.html" class="logo-head" lang="en"><span class="logo-accent">Web</span>Studio</a>
-            <ul class="site-nav">
-                <li><a href="./index.html" class="link">Студия</a></li>
-                <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
-                <li><a href="" class="link">Контакты</a></li>
+        <div class="container">
+            <!-- Навигация по сайту -->
+            <nav>
+                <a href="./index.html" class="logo-head" lang="en"><span class="logo-accent">Web</span>Studio</a>
+                <ul class="site-nav">
+                    <li><a href="./index.html" class="link">Студия</a></li>
+                    <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
+                    <li><a href="" class="link">Контакты</a></li>
+                </ul>
+            </nav>
+            <ul class="contact-nav">
+                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
             </ul>
-        </nav>
-        <ul class="contact-nav">
-            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-        </ul>
-    
+        </div>
     </header>
 
     <!-- Раздел с уникальным контентом -->
     <main>
         <!-- Секция с набором проектов и их сортировкой -->
-        <section class="section">
-            <h1 class="section-title">Портфолио</h1>
-            <ul>
-                <li><button type="button" class="portfolio-button">Веб-сайты</button></li>
-                <li><button type="button" class="portfolio-button">Приложения</button></li>
-                <li><button type="button" class="portfolio-button">Все</button></li>
-                <li><button type="button" class="portfolio-button">Дизайн</button></li>
-                <li><button type="button" class="portfolio-button">Маркетинг</button></li>
-            </ul>
+        <section class="section portfolio">
+            <div class="container">
+                <h1 class="section-title">Портфолио</h1>
+                <ul>
+                    <li><button type="button" class="portfolio-button">Веб-сайты</button></li>
+                    <li><button type="button" class="portfolio-button">Приложения</button></li>
+                    <li><button type="button" class="portfolio-button">Все</button></li>
+                    <li><button type="button" class="portfolio-button">Дизайн</button></li>
+                    <li><button type="button" class="portfolio-button">Маркетинг</button></li>
+                </ul>
 
-            <ul class="filter">
-                <li>
-                    <a href="#" class="link"> 
-                        <img src="images/poster1.jpg" alt="Технокряк" width="370">
-                        <h2 class="title">Технокряк</h2>
-                        <p>Веб-сайт</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="link">
-                        <img src="images/poster2.jpg" alt="Постер New Orlean vs Golden Star" width="370">
-                        <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-                        <p>Дизайн</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="link">
-                        <img src="images/poster3.jpg" alt="Ресторан Seafood" width="370">
-                        <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
-                        <p>Приложение</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="link">
-                        <img src="images/poster4.jpg" alt="Проект Prime" width="370">
-                        <h2 class="title">Проект <span lang="en">Prime</span></h2>
-                        <p>Маркетинг</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="images/poster5.jpg" alt="Проект Boxes" width="370">
-                        <h2 class="title">Проект <span lang="en">Boxes</span></h2>
-                        <p>Приложение</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="link">
-                        <img src="images/poster6.jpg" alt="Inspiration has no Borders" width="370">
-                        <h2 class="title" lang="en">Inspiration has no Borders</h2>
-                        <p>Веб-сайт</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="link">
-                        <img src="images/poster7.jpg" alt="Издание Limited Edition" width="370">
-                        <h2 class="title">Издание <span lang="en">Limited Edition</span></h2>
-                        <p>Дизайн</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="link">
-                        <img src="images/poster8.jpg" alt="Проект LAB" width="370">
-                        <h2 class="title">Проект <span lang="en">LAB</span></h2>
-                        <p>Маркетинг</p>
-                    </a>
-                </li>
-                <li>
-                    <img src="images/poster9.jpg" alt="Growing Business" width="370">
-                    <h2 class="title" lang="en">Growing Business</h2>
-                    <p>Приложение</p>
-                </li>
-            </ul>
-
+                <ul class="filter">
+                    <li>
+                        <a href="#" class="link"> 
+                            <img class="posters" src="images/poster1.jpg" alt="Технокряк" width="370">
+                            <h2 class="title">Технокряк</h2>
+                            <p class="text">Веб-сайт</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="link">
+                            <img class="posters" src="images/poster2.jpg" alt="Постер New Orlean vs Golden Star" width="370">
+                            <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                            <p class="text">Дизайн</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="link">
+                            <img class="posters" src="images/poster3.jpg" alt="Ресторан Seafood" width="370">
+                            <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
+                            <p class="text">Приложение</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="link">
+                            <img class="posters" src="images/poster4.jpg" alt="Проект Prime" width="370">
+                            <h2 class="title">Проект <span lang="en">Prime</span></h2>
+                            <p class="text">Маркетинг</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="link">
+                            <img class="posters" src="images/poster5.jpg" alt="Проект Boxes" width="370">
+                            <h2 class="title">Проект <span lang="en">Boxes</span></h2>
+                            <p class="text">Приложение</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="link">
+                            <img class="posters" src="images/poster6.jpg" alt="Inspiration has no Borders" width="370">
+                            <h2 class="title" lang="en">Inspiration has no Borders</h2>
+                            <p class="text">Веб-сайт</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="link">
+                            <img class="posters" src="images/poster7.jpg" alt="Издание Limited Edition" width="370">
+                            <h2 class="title">Издание <span lang="en">Limited Edition</span></h2>
+                            <p class="text">Дизайн</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="link">
+                            <img class="posters" src="images/poster8.jpg" alt="Проект LAB" width="370">
+                            <h2 class="title">Проект <span lang="en">LAB</span></h2>
+                            <p class="text">Маркетинг</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="link">
+                            <img class="posters" src="images/poster9.jpg" alt="Growing Business" width="370">
+                            <h2 class="title" lang="en">Growing Business</h2>
+                            <p class="text">Приложение</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
 
     <!-- Подвал -->
     <footer class="footer">
-        <a href="./index.html" class="logo-foot" lang="en"><span class="logo-accent">Web</span>Studio</a>
-        <address>
-            <ul class="address">
-                <li><a href="https://goo.gl/maps/6MaBWdPsoocgWnQo9" class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com" class="link-opacity">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="link-opacity">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
+        <div class="container">
+            <a href="./index.html" class="logo-foot" lang="en"><span class="logo-accent">Web</span>Studio</a>
+            <address>
+                <ul class="address">
+                    <li><a href="https://goo.gl/maps/6MaBWdPsoocgWnQo9" class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li><a href="mailto:info@devstudio.com" class="link-opacity">info@devstudio.com</a></li>
+                    <li><a href="tel:+380961111111" class="link-opacity">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
     </footer>
 
 </body>
