--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
 
     <!-- Шапка -->
     <header>
-        <div class="container">
+        <div class="container flex">
             <!-- Навигация по сайту -->
+            <a href="./index.html" class="logo-head" lang="en"><span class="logo-accent">Web</span>Studio</a>
             <nav class="navigation">
-                <a href="./index.html" class="logo-head" lang="en"><span class="logo-accent">Web</span>Studio</a>
                 <ul class="site-nav">
-                    <li><a href="./index.html" class="link current">Студия</a></li>
-                    <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-                    <li><a href="" class="link">Контакты</a></li>
+                    <li class="item"><a href="./index.html" class="link current">Студия</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                    <li class="item"><a href="" class="link">Контакты</a></li>
                 </ul>
             </nav>
             <ul class="contact-nav">
-                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
