--- a/portfolio.html
+++ b/portfolio.html
@@ -18,12 +18,12 @@
     <header>
         <div class="container">
             <!-- Навигация по сайту -->
-            <nav>
+            <nav class="navigation">
                 <a href="./index.html" class="logo-head" lang="en"><span class="logo-accent">Web</span>Studio</a>
                 <ul class="site-nav">
-                    <li><a href="./index.html" class="link">Студия</a></li>
-                    <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
-                    <li><a href="" class="link">Контакты</a></li>
+                    <li class="item"><a href="./index.html" class="link">Студия</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
+                    <li class="item"><a href="" class="link">Контакты</a></li>
                 </ul>
             </nav>
             <ul class="contact-nav">
