Закончил разметку страничек на флексах

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
         <section class="section">
             <div class="container">
                 <h2 class="section-title">Чем мы занимаемся</h2>
-                <ul>
-                    <li><img src="images/work1.jpg" alt="Programming" width="370"></li>
-                    <li><img src="images/work2.jpg" alt="Navigation" width="370"></li>
-                    <li><img src="images/work3.jpg" alt="Visualization" width="370"></li>
+                <ul class="our-work">
+                    <li class="item"><img src="images/work2.jpg" alt="Navigation" width="370"></li>
+                    <li class="item"><img src="images/work3.jpg" alt="Visualization" width="370"></li>
+                    <li class="item"><img src="images/work1.jpg" alt="Programming" width="370"></li>
                 </ul>
             </div>
         </section>
