--- a/portfolio.html
+++ b/portfolio.html
@@ -16,10 +16,10 @@
     
     <!-- Шапка -->
     <header>
-        <div class="container">
+        <div class="container flex">
             <!-- Навигация по сайту -->
+            <a href="./index.html" class="logo-head" lang="en"><span class="logo-accent">Web</span>Studio</a>
             <nav class="navigation">
-                <a href="./index.html" class="logo-head" lang="en"><span class="logo-accent">Web</span>Studio</a>
                 <ul class="site-nav">
                     <li class="item"><a href="./index.html" class="link">Студия</a></li>
                     <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
@@ -27,8 +27,8 @@
                 </ul>
             </nav>
             <ul class="contact-nav">
-                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
@@ -39,72 +39,72 @@
         <section class="section portfolio">
             <div class="container">
                 <h1 class="section-title">Портфолио</h1>
-                <ul>
-                    <li><button type="button" class="portfolio-button">Веб-сайты</button></li>
-                    <li><button type="button" class="portfolio-button">Приложения</button></li>
-                    <li><button type="button" class="portfolio-button">Все</button></li>
-                    <li><button type="button" class="portfolio-button">Дизайн</button></li>
-                    <li><button type="button" class="portfolio-button">Маркетинг</button></li>
+                <ul class="filter-buttons">
+                    <li class="item"><button type="button" class="portfolio-button">Все</button></li>
+                    <li class="item"><button type="button" class="portfolio-button">Приложения</button></li>
+                    <li class="item"><button type="button" class="portfolio-button">Веб-сайты</button></li>
+                    <li class="item"><button type="button" class="portfolio-button">Дизайн</button></li>
+                    <li class="item"><button type="button" class="portfolio-button">Маркетинг</button></li>
                 </ul>
 
                 <ul class="filter">
-                    <li>
+                    <li class="item">
                         <a href="#" class="link"> 
                             <img class="posters" src="images/poster1.jpg" alt="Технокряк" width="370">
                             <h2 class="title">Технокряк</h2>
                             <p class="text">Веб-сайт</p>
                         </a>
                     </li>
-                    <li>
+                    <li class="item">
                         <a href="#" class="link">
                             <img class="posters" src="images/poster2.jpg" alt="Постер New Orlean vs Golden Star" width="370">
                             <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
                             <p class="text">Дизайн</p>
                         </a>
                     </li>
-                    <li>
+                    <li class="item">
                         <a href="#" class="link">
                             <img class="posters" src="images/poster3.jpg" alt="Ресторан Seafood" width="370">
                             <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
                             <p class="text">Приложение</p>
                         </a>
                     </li>
-                    <li>
+                    <li class="item">
                         <a href="#" class="link">
                             <img class="posters" src="images/poster4.jpg" alt="Проект Prime" width="370">
                             <h2 class="title">Проект <span lang="en">Prime</span></h2>
                             <p class="text">Маркетинг</p>
                         </a>
                     </li>
-                    <li>
+                    <li class="item">
                         <a href="#" class="link">
                             <img class="posters" src="images/poster5.jpg" alt="Проект Boxes" width="370">
                             <h2 class="title">Проект <span lang="en">Boxes</span></h2>
                             <p class="text">Приложение</p>
                         </a>
                     </li>
-                    <li>
+                    <li class="item">
                         <a href="#" class="link">
                             <img class="posters" src="images/poster6.jpg" alt="Inspiration has no Borders" width="370">
                             <h2 class="title" lang="en">Inspiration has no Borders</h2>
                             <p class="text">Веб-сайт</p>
                         </a>
                     </li>
-                    <li>
+                    <li class="item">
                         <a href="#" class="link">
                             <img class="posters" src="images/poster7.jpg" alt="Издание Limited Edition" width="370">
                             <h2 class="title">Издание <span lang="en">Limited Edition</span></h2>
                             <p class="text">Дизайн</p>
                         </a>
                     </li>
-                    <li>
+                    <li class="item">
                         <a href="#" class="link">
                             <img class="posters" src="images/poster8.jpg" alt="Проект LAB" width="370">
                             <h2 class="title">Проект <span lang="en">LAB</span></h2>
                             <p class="text">Маркетинг</p>
                         </a>
                     </li>
-                    <li>
+                    <li class="item">
                         <a href="#" class="link">
                             <img class="posters" src="images/poster9.jpg" alt="Growing Business" width="370">
                             <h2 class="title" lang="en">Growing Business</h2>
