--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <!-- Секция 'Особенности' -->
         <section class="section">
             <div class="container">
-                <h2 class="section-title">Особенности</h2>
+                <h2 class="section-title hide">Особенности</h2>
                 <ul class="features">
                     <li class="item">
                         <h3 class="title">Внимание к деталям</h3>
@@ -120,7 +120,7 @@
                 <ul class="address">
                     <li><a href="https://goo.gl/maps/6MaBWdPsoocgWnQo9" class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
                     <li><a href="mailto:info@devstudio.com" class="link-opacity">info@devstudio.com</a></li>
-                    <li><a href="tel:+380961111111" class="link-opacity">+38 096 111 11 11</a></li>
+                    <li><a href="tel:+380961111111" class="link-opacity ">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </div>
