Продолжаю работу над позиционированием

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
         <!-- Секция с набором проектов и их сортировкой -->
         <section class="section portfolio">
             <div class="container">
-                <h1 class="section-title">Портфолио</h1>
+                <h1 class="section-title hide">Портфолио</h1>
                 <ul class="filter-buttons">
                     <li class="item"><button type="button" class="portfolio-button">Все</button></li>
                     <li class="item"><button type="button" class="portfolio-button">Приложения</button></li>
@@ -120,11 +120,11 @@
     <footer class="footer">
         <div class="container">
             <a href="./index.html" class="logo-foot" lang="en"><span class="logo-accent">Web</span>Studio</a>
-            <address>
-                <ul class="address">
-                    <li><a href="https://goo.gl/maps/6MaBWdPsoocgWnQo9" class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
-                    <li><a href="mailto:info@devstudio.com" class="link-opacity">info@devstudio.com</a></li>
-                    <li><a href="tel:+380961111111" class="link-opacity">+38 096 111 11 11</a></li>
+            <address class="address">
+                <ul>
+                    <li class="item"><a href="https://goo.gl/maps/6MaBWdPsoocgWnQo9" class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li class="item"><a href="mailto:info@devstudio.com" class="link-opacity">info@devstudio.com</a></li>
+                    <li class="item"><a href="tel:+380961111111" class="link-opacity">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </div>
