--- a/portfolio.html
+++ b/portfolio.html
@@ -120,8 +120,8 @@
     <footer class="footer">
         <div class="container">
             <a href="./index.html" class="logo-foot" lang="en"><span class="logo-accent">Web</span>Studio</a>
-            <address class="address">
-                <ul>
+            <address>
+                <ul class="address">
                     <li class="item"><a href="https://goo.gl/maps/6MaBWdPsoocgWnQo9" class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
                     <li class="item"><a href="mailto:info@devstudio.com" class="link-opacity">info@devstudio.com</a></li>
                     <li class="item"><a href="tel:+380961111111" class="link-opacity">+38 096 111 11 11</a></li>
