--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
             <a href="./index.html" class="logo-foot" lang="en"><span class="logo-accent">Web</span>Studio</a>
             <address>
                 <ul class="address">
-                    <li><a href="https://goo.gl/maps/6MaBWdPsoocgWnQo9" class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
-                    <li><a href="mailto:info@devstudio.com" class="link-opacity">info@devstudio.com</a></li>
+                    <li class="item"><a href="https://goo.gl/maps/6MaBWdPsoocgWnQo9" class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li class="item"><a href="mailto:info@devstudio.com" class="link-opacity">info@devstudio.com</a></li>
                     <li><a href="tel:+380961111111" class="link-opacity ">+38 096 111 11 11</a></li>
                 </ul>
             </address>
